--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,25 +1,49 @@
+* {
+  display: flex;
+
+}
 .header  {
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+  min-width: none;
+  width: -20px;
+  padding: 2px;
 }
 
 .logo {
+  display: flex;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+  padding: 10px;
+  width: 190px;
 }
 
-ul {
+.right-links.left-links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+
 }
 
 a {
+  display: flex;
+  margin: 30px;
+  padding: 10px;
   font-size: 22px;
   background: white;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  justify-content: space-between;
 }
